# nes-emu

./: .envrc  .gitignore  Cargo.toml  README.md
reference/: dma.txt
src/: bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  mapper.rs  opcodes.rs  trace.rs  utils.rs
src/apu/: mix_table.rs  mod.rs  noise.rs  pulse.rs  registers.rs  triag.rs
src/apu/channel/: dmc.rs  mod.rs  noise.rs  pulse.rs  triag.rs
src/apu/units/: envelope.rs  filter.rs  mod.rs  sweep.rs
src/ppu/: mod.rs  palette.rs  registers.rs
src/render/: frame.rs  mod.rs
