[package]
name = "nes-emu"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "^2"
sdl2 = { version = "^0.38", features = ["use-pkgconfig", "static-link"] }
rand = "^0.9"
clap = { version = "^4", features = ["derive"] }
log = "^0.4"
env_logger = "^0.11"
nix = { version = "^0.30", default-features = false, features = ["signal"] }

[[bin]]
name = "emulator"
path = "src/bin/main.rs"
